--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@
 .moviesparaghrap {
     font-family: 'Radley', serif;
 }
-.moviesparaghrap2{
-  font-family: 'Poppins', sans-serif;
+
+.moviesparaghrap2 {
+    font-family: 'Poppins', sans-serif;
 }
 
 #triangle-topright {
@@ -86,7 +87,6 @@
     border-top: 40px solid transparent;
     border-left: 80px solid white;
     border-bottom: 50px solid transparent;
-
 }
 
 .triangle-bottomleft {
@@ -97,24 +97,50 @@
     border-right: 100px solid transparent;
 }
 
-.movie-triangle1{
-  width: 0;
-  height: 0;
-  border-top: 100px solid black;
-  border-right: 100px solid transparent;
+.about-triangle1 {
+    width: 0;
+    height: 0;
+    margin-left: 400px;
+    border-top: 100px solid black;
+    border-left: 100px solid transparent;
 }
-.movie-triangle2{
-  width: 0;
-  height: 0;
-  transform: rotate(180deg);
-  border-top: 100px solid #770606 ;
-  border-right: 100px solid transparent;
+
+.about-triangle2 {
+    width: 0;
+    height: 0;
+    margin-left: 400px;
+    transform: rotate(180deg);
+    border-top: 100px solid #770606;
+    border-left: 100px solid transparent;
+}
+
+.movie-triangle1 {
+    width: 0;
+    height: 0;
+    border-top: 100px solid black;
+    border-right: 100px solid transparent;
+}
+
+.movie-triangle2 {
+    width: 0;
+    height: 0;
+    transform: rotate(180deg);
+    border-top: 100px solid #770606;
+    border-right: 100px solid transparent;
 }
 
 .triangle-topright {
     width: 0;
     height: 0;
     margin-left: 800px;
+    border-top: 100px solid black;
+    border-left: 100px solid transparent;
+}
+
+.hobbittriangle-topright {
+    width: 0;
+    height: 0;
+    margin-left: 850px;
     border-top: 100px solid black;
     border-left: 100px solid transparent;
 }
@@ -144,7 +170,6 @@
     background-color: #770606;
 }
 
-
 .container:hover .overlay {
     opacity: 1;
 }
@@ -159,9 +184,8 @@
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
-
 
 .container:hover .movieoverlay {
     opacity: 1;
@@ -178,33 +202,46 @@
     transform: translate(-50%, -50%);
 }
 
+.thehobbit-text {
+    background-image: url(./images/thehobbit1.jpg);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 50px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: 'Radley', serif;
+    font-weight: 500;
+    -webkit-font-smoothing: antialiased;
+}
+
 .moviegener-style {
     font-family: 'Radley', serif;
 }
 
-.mainmovie-div{
-width:500px;
-height:500px;
+.mainmovie-div {
+    width: 500px;
+    height: 500px;
+    background-image: url(./images/aboutmain.jpg);
 }
 
-.line-1{
-  margin-left:450px;
-  margin-top:300px;
-  width:400px;
-  height:2px;
-  background: white;
-  transform: rotate(90deg);
-  }
+.line-1 {
+    margin-left: 406px;
+    margin-top: 300px;
+    width: 400px;
+    height: 2px;
+    background: white;
+    transform: rotate(90deg);
+}
 
 #hiddenmovie-div {
-  height:5000px;
-  display: none;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  cursor: pointer;
-  z-index: 289;
+    height: 5000px;
+    display: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    cursor: pointer;
+    z-index: 289;
 }
 
 #movie-backdrop {
